# EcoBridge

./: .gitignore  README.md  a.py  b.py  exported_code.txt  generate_items_config.py  generate_items_hardened.py  index.html  sim_chart.py  sim_daily.csv  sim_hourly.csv  sim_long_run.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build-and-sync.yml  main.yml  sim-pages.yml  test.yml
docs/: ECONOMIC_TECHNICAL_REPORT.md
ecobridge-java/: build.gradle.kts
ecobridge-java/src/main/java/top/ellan/ecobridge/: EcoBridge.java
ecobridge-java/src/main/java/top/ellan/ecobridge/api/: UShopProvider.java
ecobridge-java/src/main/java/top/ellan/ecobridge/bridge/: NativeBridge.java  NativeContextBuilder.java  NativeLoader.java
ecobridge-java/src/main/java/top/ellan/ecobridge/cache/: HotDataCache.java
ecobridge-java/src/main/java/top/ellan/ecobridge/collector/: ActivityCollector.java
ecobridge-java/src/main/java/top/ellan/ecobridge/command/: TransferCommand.java
ecobridge-java/src/main/java/top/ellan/ecobridge/database/: DatabaseManager.java  TransactionDao.java
ecobridge-java/src/main/java/top/ellan/ecobridge/engine/: PriceComputeEngine.java
ecobridge-java/src/main/java/top/ellan/ecobridge/hook/: EcoPlaceholderExpansion.java  UShopHookManager.java
ecobridge-java/src/main/java/top/ellan/ecobridge/infrastructure/: SecurityConfig.java
ecobridge-java/src/main/java/top/ellan/ecobridge/listener/: CacheListener.java  CoinsEngineListener.java  CommandInterceptor.java  TradeListener.java  UShopTransactionHook
ecobridge-java/src/main/java/top/ellan/ecobridge/manager/: EconomicStateManager.java  EconomyManager.java  PricingManager.java  TransferManager.java  UShopLimitInjector.java  UShopPriceInjector.java
ecobridge-java/src/main/java/top/ellan/ecobridge/model/: SaleRecord.java
ecobridge-java/src/main/java/top/ellan/ecobridge/network/: RedisManager.java
ecobridge-java/src/main/java/top/ellan/ecobridge/storage/: ActivityCollector.java  AsyncLogger.java
ecobridge-java/src/main/java/top/ellan/ecobridge/util/: ConfigValidator.java  HolidayManager.java  (+4 more)
ecobridge-java/src/main/resources/: config.yml  items_hardened.yml  items_template.yml  paper-plugin.yml  plugin.yml
ecobridge-rust/: Cargo.toml  build.rs  ecobridge_rust.h
ecobridge-rust/src/: lib.rs  models.rs  storage.rs
ecobridge-rust/src/economy/: control.rs  environment.rs  forecast.rs  kalman.rs  macro_eco.rs  mod.rs  mpc.rs  pricing.rs  summation.rs  volatility.rs
ecobridge-rust/src/security/: mod.rs  regulator.rs
ecobridge-rust/src/storage/: mod.rs
sim_output/: dashboard.html  sim_daily.csv  sim_hourly.csv
(+28 files in other folders)
