[package]
name = "ecobridge_rust"
version = "0.8.3"
edition = "2021"
authors = ["Ellan"]
description = "EcoBridge Economy Core - Hardened DuckDB Analytics Engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
# 系统接口
libc = "0.2"

# 数据库引擎
# 这里的版本请根据您实际环境微调，如果 1.1 编译有问题可回退到 0.9.2
duckdb = { version = "1.1", features = ["bundled", "chrono"] }

# [关键修复] 添加 MPSC 通道支持，用于零阻塞日志写入
crossbeam-channel = "0.5"

# 并行计算 (Rayon)
# 设置为 optional，由下方的 [features] 控制开关
rayon = { version = "1.10", optional = true }

# 时间处理
chrono = { version = "0.4", features = ["std"] }

# 静态变量
lazy_static = "1.5"

[build-dependencies]
cbindgen = "0.26"

[features]
# 默认不开启并行，以减小二进制体积和编译时间
default = []

# 定义 parallel 特性：开启此特性时，自动启用 rayon 依赖
# 编译命令: cargo build --release --features parallel
parallel = ["dep:rayon"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# 剥离符号表以减小二进制体积
strip = "symbols"

# [重要] 移除了 panic = "abort"
# 原因：lib.rs 使用了 catch_unwind 宏 (ffi_guard) 来保护 JVM 不被 Rust panic 搞崩。