[package]
name = "ecobridge_rust"
version = "0.8.3"
edition = "2021"
authors = ["Ellan"]
description = "EcoBridge Economy Core - Hardened DuckDB Analytics Engine"

[lib]
# 编译为 C 动态库 (.dll / .so / .dylib)
crate-type = ["cdylib"]

[dependencies]
# 系统底层接口
libc = "0.2.180"

duckdb = { version = "1.4.3", features = ["bundled", "chrono", "arrow"] }

# 高性能 MPSC 通道
crossbeam-channel = "0.5.15"

# 并行计算框架
rayon = { version = "1.11.0", optional = true }

# 时间处理
chrono = { version = "0.4.43", features = ["std"] }

# 静态全局变量
lazy_static = "1.5"

[build-dependencies]
# C 头文件生成
cbindgen = "0.29.2"

[features]
default = []
parallel = ["dep:rayon"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

# 保持默认的 panic = "unwind" 以支持 FFM 异常捕获