[package]
name = "ecobridge_rust"
version = "0.9.1"
edition = "2021"
authors = ["Ellan"]
description = "EcoBridge Economy Core - Macro Adaptive & Parallel Engine"

[lib]
# 编译为 C 动态库，供 Java 25 FFM 映射调用
crate-type = ["cdylib"]

[dependencies]
# 系统底层接口，处理 C-ABI 兼容数据类型
libc = "0.2.180"

# [核心变更] 并行计算框架，用于实现 SIMD 批量定价演算
rayon = "1.11.0"

# [v2.0] DuckDB → H2 migration: database layer now pure Java.
# chrono removed — timestamp handling is now on the Java side.

[build-dependencies]
# 自动化生成 C 头文件 (.h)，供 Java jextract 解析
cbindgen = "0.29.2"

[features]
# 默认启用高性能并行计算
default = ["parallel"]
parallel = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

# 保持默认以支持 FFM 异常捕获
panic = "unwind"